# clinical-agent-world-model

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
examples/: handwritten_episodes.jsonl
reports/: baseline_results.md  blog_world_model.md  planner_results.md  portfolio.md  roadmap.md  stress_results.md  world_model_eval.md
scripts/: check_reports_fresh.py  generate_trajectories.py  run_baselines.py  run_planner.py  run_stress_eval.py  train_world_model.py
src/clinical_world_model/: __init__.py  generation.py  metrics.py  planner.py  policies.py  schemas.py  simulator.py  stress.py  world_model.py
tests/: test_generate_trajectories.py  test_metrics.py  test_packaging.py  test_planner.py  test_policies.py  test_schemas.py  test_simulator.py  test_stress.py  test_synthetic_invariants.py  test_world_model.py
