[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-agent-world-model"
version = "0.0.1"
description = "Synthetic hospital workflow world model for tool-using clinical AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "Clinical Agent World Model Contributors"}
]
dependencies = [
  "scikit-learn>=1.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
